[tool.poetry]
name = "masking_data"
version = "0.1.0"
description = ""
authors = ["nuxion <nuxion@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
